// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Revenue Attribution Service stats methods getCampaignsAndChatPerformanceOverTime should return prepared and backfilled data for chart 1`] = `
{
  "campaignCTR": [
    {
      "x": "Feb 28th",
      "y": 12.32,
    },
    {
      "x": "Mar 1st",
      "y": 0,
    },
    {
      "x": "Mar 2nd",
      "y": 0,
    },
  ],
  "campaignConversionRate": [
    {
      "x": "Feb 28th",
      "y": 13.25,
    },
    {
      "x": "Mar 1st",
      "y": 0,
    },
    {
      "x": "Mar 2nd",
      "y": 0,
    },
  ],
  "chatConversionRate": [
    {
      "x": "Feb 28th",
      "y": 9.6,
    },
    {
      "x": "Mar 1st",
      "y": 2.9411764705882355,
    },
    {
      "x": "Mar 2nd",
      "y": 0,
    },
  ],
}
`;

exports[`Revenue Attribution Service stats methods getCampaignsPerformance should fill default values if data is missing 1`] = `
{
  "campaign1": {
    "campaignSalesCount": 0,
    "clickThroughRate": 219.6581196581197,
    "clicks": 24,
    "clicksConversionRate": 0,
    "clicksConverted": 0,
    "clicksRate": 10.2,
    "clicksRevenue": 0,
    "discountCodesRevenue": 0,
    "discountCodesUsed": 0,
    "engagement": 514,
    "impressions": 234,
    "ticketsConversionRate": 0,
    "ticketsConverted": 0,
    "ticketsCreated": 157,
    "ticketsCreationRate": 67.09401709401709,
    "ticketsRevenue": 0,
    "totalConversionRate": 0,
    "totalRevenue": 0,
    "traffic": 5,
  },
  "campaign2": {
    "campaignSalesCount": 0,
    "clickThroughRate": 302.29276895943565,
    "clicks": 57,
    "clicksConversionRate": 0,
    "clicksConverted": 0,
    "clicksRate": 21.34,
    "clicksRevenue": 0,
    "discountCodesRevenue": 0,
    "discountCodesUsed": 0,
    "engagement": 1714,
    "impressions": 567,
    "ticketsConversionRate": 0,
    "ticketsConverted": 0,
    "ticketsCreated": 357,
    "ticketsCreationRate": 62.96296296296296,
    "ticketsRevenue": 0,
    "totalConversionRate": 0,
    "totalRevenue": 0,
    "traffic": 3,
  },
}
`;

exports[`Revenue Attribution Service stats methods getCampaignsPerformance should return prepared data for campaign performance table 1`] = `
{
  "campaign1": {
    "campaignSalesCount": 125,
    "clickThroughRate": 219.6581196581197,
    "clicks": 24,
    "clicksConversionRate": 487.5,
    "clicksConverted": 117,
    "clicksRate": 10.2,
    "clicksRevenue": 3596.25,
    "discountCodesRevenue": 4567.65,
    "discountCodesUsed": 125,
    "engagement": 514,
    "impressions": 234,
    "ticketsConversionRate": 49.681528662420384,
    "ticketsConverted": 78,
    "ticketsCreated": 157,
    "ticketsCreationRate": 67.09401709401709,
    "ticketsRevenue": 1234.47,
    "totalConversionRate": 24.31906614785992,
    "totalRevenue": 12345.67,
    "traffic": 5,
  },
  "campaign2": {
    "campaignSalesCount": 358,
    "clickThroughRate": 302.29276895943565,
    "clicks": 57,
    "clicksConversionRate": 435.08771929824564,
    "clicksConverted": 248,
    "clicksRate": 21.34,
    "clicksRevenue": 3596.25,
    "discountCodesRevenue": 4567.65,
    "discountCodesUsed": 125,
    "engagement": 1714,
    "impressions": 567,
    "ticketsConversionRate": 21.84873949579832,
    "ticketsConverted": 78,
    "ticketsCreated": 357,
    "ticketsCreationRate": 62.96296296296296,
    "ticketsRevenue": 1234.47,
    "totalConversionRate": 20.88681446907818,
    "totalRevenue": 12345.67,
    "traffic": 3,
  },
}
`;

exports[`Revenue Attribution Service stats methods getRevenueUpliftOverTime should return prepared data for chart 1`] = `
[
  {
    "x": "Feb 28th",
    "y": 43.32,
  },
]
`;
